# SEU-MEI

./: .gitignore
lab1/: diagram.json  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  wokwi.toml
lab1/main/: A.c  B.c  C.c  CMakeLists.txt  C_improved.c
lab2/: CMakeLists.txt
lab2/.devcontainer/: Dockerfile
lab2/main/: oneshot_read_main.c
lab3/: CMakeLists.txt  main.c
lab3/main/: CMakeLists.txt  mcpwm_sync_example_main.c
lab4/: CMakeLists.txt
lab4/clientes/linux/: cliente_linux.c
lab4/clientes/mac/: send.py
lab4/main/: CMakeLists.txt  can_gato_raton.c  pong_game.c  reset.py  send.py  test_game.c  twai_eco_test.c  twai_game_receiver.c
lab5/: CMakeLists.txt
lab5/main/: 2_binary.c  2_mutex.c  3_multitarea.c  4_overhead.c  5_priority.c  CMakeLists.txt  test.c
lab6/: CMakeLists.txt
